--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "build:client:prod": "ng build -prod --build-optimizer --app 0",
     "build:aot": "ng build --aot --app 1",
     "build:server": "webpack",
-    "test": "ng test --watch=false",
-    "test:watch": "ng test",
-    "lint": "ng lint --fix",
+    "test": "npm run test:ng && npm run build && mocha",
+    "test:ng": "ng test --watch=false",
+    "test:ng:watch": "ng test",
+    "lint": "eslint --fix . && ng lint --fix",
     "e2e": "ng e2e"
   },
   "main": "./dist/server.js",
@@ -60,9 +61,11 @@
     "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "mocha": "^3.0.2",
     "npm-run-all": "^4.1.2",
     "node-sass": "^4.7.2",
     "protractor": "~5.2.0",
+    "supertest": "^3.0.0",
     "ts-loader": "^3.1.1",
     "ts-node": "~3.3.0",
     "tslint": "~5.8.0",
