--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "name": "proxy-engine-ng",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "run-s build:client build:aot build:server",
     "build:prod": "run-s build:client:prod build:aot build:server",
-    "build:client": "ng build -prod --build-optimizer --app 0",
+    "build:client": "ng build --app 0",
     "build:client:prod": "ng build -prod --build-optimizer --app 0",
     "build:aot": "ng build --aot --app 1",
     "build:server": "webpack",
-    "test": "npm run test:ng && npm run build && mocha",
+    "test": "npm run test:ng && npm run test:e2e && npm run build && mocha",
     "test:ng": "ng test --watch=false",
+    "test:e2e": "ng e2e",
     "test:ng:watch": "ng test",
     "lint": "eslint --fix . && ng lint --fix",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "npm run build:prod"
   },
   "main": "./dist/server.js",
-  "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
