--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "build": "run-s build:client build:aot build:server",
     "build:prod": "run-s build:client:prod build:aot build:server",
     "build:client": "ng build --app 0",
+    "build:client:testing": "ng build -testing --app 0",
+    "build:client:staging": "ng build -staging --app 0",
     "build:client:prod": "ng build -prod --build-optimizer --app 0",
     "build:aot": "ng build --aot --app 1",
     "build:server": "webpack",
+    "build:server:prod": "webpack -p",
     "test": "npm run test:ng && npm run build && mocha",
     "test:ng": "ng test --watch=false",
     "test:e2e": "ng e2e",
