--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:aot": "ng build --aot --app 1",
     "build:server": "webpack",
     "build:server:prod": "webpack -p",
-    "test": "npm run test:ng && npm run build && mocha",
+    "test": "npm run test:ng && npm run test:e2e && npm run build && mocha",
     "test:ng": "ng test --watch=false",
     "test:e2e": "ng e2e",
     "test:ng:watch": "ng test",
