--- a/src/tsconfig.server.json
+++ b/src/tsconfig.server.json
@@ -19,7 +19,7 @@
     "**/*.spec.ts",
     "server.ts",
     "server.test.ts",
-    "trails.server.ts"
+    "trails.config.ts"
   ],
   "angularCompilerOptions": {
     "entryModule": "app/root/app.server.module#AppServerModule"
