[feat] package Trails Test, Add NGRX Router
- adds test:server to package.json
- conforms env for app
- adds NGRX router

--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "build:aot": "ng build --aot --app 1",
     "build:server": "webpack",
     "build:server:prod": "webpack -p",
-    "test": "npm run test:ng && npm run test:e2e && npm run build && mocha",
+    "test": "npm run test:ng && npm run test:e2e && npm run test:server",
     "test:ng": "ng test --watch=false",
     "test:e2e": "ng e2e",
     "test:ng:watch": "ng test",
+    "test:server": "npm run build && mocha",
     "lint": "eslint --fix . && ng lint --fix",
     "e2e": "ng e2e",
     "heroku-postbuild": "npm run build:prod"
@@ -37,6 +38,7 @@
     "@angular/router": "^5.0.0",
     "@ngrx/effects": "^4.1.1",
     "@ngrx/entity": "^4.1.1",
+    "@ngrx/router-store": "^4.1.1",
     "@ngrx/store": "^4.1.1",
     "@ngrx/store-devtools": "^4.1.1",
     "@nguniversal/express-engine": "^5.0.0-beta.5",
