[feat] move e2e, reconfigure configuration.

--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "build:aot": "ng build --aot --app 1",
     "build:server": "webpack",
     "build:server:prod": "webpack -p",
-    "test": "npm run test:ng && npm run test:e2e && npm run test:server",
+    "test": "run-s test:ng test:e2e test:server",
     "test:ng": "ng test --watch=false",
     "test:e2e": "ng e2e",
     "test:ng:watch": "ng test",
     "test:server": "npm run build && mocha",
-    "lint": "eslint --fix . && ng lint --fix",
+    "lint": "eslint --fix . && ng lint --fix .",
     "e2e": "ng e2e",
     "heroku-postbuild": "npm run build:prod"
   },
