--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "proxy-engine-ng",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "license": "MIT",
   "repository": "https://github.com/calistyle/proxy-engine-ng.git",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
     "build": "run-s build:client build:aot build:server",
-    "build:prod": "run-s build:client:prod build:aot build:server",
+    "build:prod": "run-s build:client:prod build:aot:prod build:server",
+    "build:staging": "run-s build:client:staging build:aot:staging build:server:staging",
+    "build:testing": "run-s build:client:testing build:aot:testing build:server:testing",
     "build:client": "ng build --app 0",
-    "build:client:testing": "ng build -testing --app 0",
-    "build:client:staging": "ng build -staging --app 0",
     "build:client:prod": "ng build -prod --build-optimizer --app 0",
+    "build:client:staging": "ng build --environment=staging --app 0",
+    "build:client:testing": "ng build --environment=testing --app 0",
     "build:aot": "ng build --aot --app 1",
+    "build:aot:prod": "ng build --aot --app 1",
+    "build:aot:staging": "ng build --aot --app 1",
+    "build:aot:testing": "ng build --aot --app 1",
     "build:server": "webpack",
+    "build:server:staging": "webpack",
+    "build:server:testing": "webpack",
     "build:server:prod": "webpack -p",
     "test": "run-s test:ng test:e2e test:server",
     "test:ng": "ng test --watch=false",
