--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "build:server:staging": "webpack",
     "build:server:testing": "webpack",
     "build:server:prod": "webpack -p",
+    "build:dist": "ng-packagr -p ng-package.json",
     "test": "run-s test:ng test:e2e test:server",
     "test:ng": "ng test --watch=false",
     "test:e2e": "ng e2e",
@@ -81,8 +82,9 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "mocha": "^3.0.2",
-    "npm-run-all": "^4.1.2",
+    "ng-packagr": "^1.6.0",
     "node-sass": "^4.7.2",
+    "npm-run-all": "^4.1.2",
     "protractor": "~5.2.0",
     "supertest": "^3.0.0",
     "ts-loader": "^3.1.1",
