[feat] service workers

--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "build:server:staging": "webpack",
     "build:server:testing": "webpack",
     "build:server:prod": "webpack -p",
+    "build:prod:ngsw": "npm run build:prod && npm run ngsw:config && npm run ngsw:copy",
+    "serve:prod:ngsw": "npm run build:prod:ngsw && node dist/server",
     "build:dist": "ng-packagr -p ng-package.json",
+    "ngsw:config": "node_modules/.bin/ngsw-config dist src/ngsw-config.json",
+    "ngsw:copy": "cp node_modules/@angular/service-worker/ngsw-worker.js dist/",
     "test": "run-s test:ng test:e2e test:server",
     "test:ng": "ng test --watch=false",
     "test:e2e": "ng e2e",
