--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -1,12 +1,12 @@
-[{
-  "index": "/index.html",
+{
+  "index": "/views/index.ng.html",
   "assetGroups": [{
     "name": "app",
     "installMode": "prefetch",
     "resources": {
       "files": [
-        "/favicon.ico",
-        "/index.html"
+        "/assets/images/icons/favicon.ico",
+        "/views/index.ng.html"
       ],
       "versionedFiles": [
         "/*.bundle.css",
@@ -23,5 +23,13 @@
         "/assets/**"
       ]
     }
+  }, {
+    "name": "fonts",
+    "resources": {
+      "urls": [
+        "https://fonts.googleapis.com/**",
+        "https://fonts.gstatic.com/**"
+      ]
+    }
   }]
-}]
+}
