--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -20,7 +20,7 @@
     "updateMode": "prefetch",
     "resources": {
       "files": [
-        "/assets/**"
+        "/assets/**/*"
       ]
     }
   }, {
