--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NgEngine",
+  "name": "ng-engine",
   "version": "2.0.0",
   "license": "MIT",
   "repository": "https://github.com/CaliStyle/NgEngine.git",
