[fix] npm friendly pack names

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
       "dom"
     ],
     "paths": {
+      "ng-engine": [
+        "./src/app/ngEngine/*"
+      ],
       "@app/actions/*": [
         "./src/app/root/store/actions/*"
       ],
