--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-engine",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "license": "MIT",
   "repository": "https://github.com/CaliStyle/NgEngine.git",
   "keywords": [
@@ -36,7 +36,7 @@
     "ngsw:config": "node_modules/.bin/ngsw-config dist src/ngsw-config.json",
     "ngsw:copy": "cp node_modules/@angular/service-worker/ngsw-worker.js dist/",
     "test": "run-s test:ng test:e2e test:server",
-    "test:ng": "ng test --watch=false",
+    "test:ng": "ng test --watch=false --log-level=error",
     "test:e2e": "ng e2e",
     "test:ng:watch": "ng test",
     "test:server": "npm run build && mocha",
@@ -50,24 +50,24 @@
     "@angular/router": ">=5.0.0 <6.0.0"
   },
   "devDependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/cdk": "^5.1.1",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/material": "^5.2.1",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/platform-server": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "@angular/service-worker": "^5.2.3",
-    "@ngrx/effects": "^5.1.0",
-    "@ngrx/entity": "^5.1.0",
-    "@ngrx/router-store": "^5.0.1",
-    "@ngrx/store": "^5.1.0",
-    "@ngrx/store-devtools": "^5.1.0",
+    "@angular/animations": "^5.2.9",
+    "@angular/cdk": "^5.2.4",
+    "@angular/common": "^5.2.9",
+    "@angular/compiler": "^5.2.9",
+    "@angular/core": "^5.2.9",
+    "@angular/forms": "^5.2.9",
+    "@angular/http": "^5.2.9",
+    "@angular/material": "^5.2.4",
+    "@angular/platform-browser": "^5.2.9",
+    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/platform-server": "^5.2.9",
+    "@angular/router": "^5.2.9",
+    "@angular/service-worker": "^5.2.9",
+    "@ngrx/effects": "^5.2.0",
+    "@ngrx/entity": "^5.2.0",
+    "@ngrx/router-store": "^5.2.0",
+    "@ngrx/store": "^5.2.0",
+    "@ngrx/store-devtools": "^5.2.0",
     "@nguniversal/express-engine": "^5.0.0-beta.5",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "core-js": "^2.4.1",
@@ -81,9 +81,9 @@
     "trails": "^2.0.0",
     "winston": "^2.2",
     "zone.js": "^0.8.14",
-    "@angular/cli": "1.6.7",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
+    "@angular/cli": "1.7.3",
+    "@angular/compiler-cli": "^5.2.9",
+    "@angular/language-service": "^5.2.9",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~9.4.0",
@@ -100,7 +100,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "mocha": "^3.0.2",
-    "ng-packagr": "^1.6.0",
+    "ng-packagr": "^2.2.0",
     "node-sass": "^4.7.2",
     "npm-run-all": "^4.1.2",
     "protractor": "~5.1.2",
