--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-engine",
-  "version": "3.0.2",
+  "version": "3.0.3",
   "license": "MIT",
   "repository": "https://github.com/CaliStyle/NgEngine.git",
   "keywords": [
@@ -109,7 +109,7 @@
     "ts-loader": "^3.1.1",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.1",
+    "typescript": ">=2.4.2 <2.7.0",
     "webpack-node-externals": "^1.6.0"
   },
   "engines": {
