--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-engine",
-  "version": "3.1.2",
+  "version": "3.1.3",
   "license": "MIT",
   "repository": "https://github.com/CaliStyle/NgEngine.git",
   "keywords": [
@@ -113,7 +113,7 @@
     "webpack-node-externals": "^1.6.0"
   },
   "engines": {
-    "node": ">= 6.0.0 < 7.0.0",
+    "node": ">= 6.0.0",
     "npm": ">= 3"
   },
   "eslintConfig": {
