--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-engine",
-  "version": "4.0.0",
+  "version": "6.0.0",
   "license": "MIT",
   "repository": "https://github.com/CaliStyle/NgEngine.git",
   "keywords": [
@@ -18,80 +18,76 @@
     "build:prod": "run-s build:client:prod build:aot:prod build:server",
     "build:staging": "run-s build:client:staging build:aot:staging build:server:staging",
     "build:testing": "run-s build:client:testing build:aot:testing build:server:testing",
-    "build:client": "ng build --app 0",
-    "build:client:prod": "ng build -prod --build-optimizer --app 0",
-    "build:client:staging": "ng build --environment=staging --app 0",
-    "build:client:testing": "ng build --environment=testing --app 0",
-    "build:aot": "ng build --aot --app 1",
-    "build:aot:prod": "ng build --aot --app 1",
-    "build:aot:staging": "ng build --aot --app 1",
-    "build:aot:testing": "ng build --aot --app 1",
+    "build:client": "ng build",
+    "build:client:prod": "ng build --prod --build-optimizer",
+    "build:client:staging": "ng build --environment=staging",
+    "build:client:testing": "ng build --environment=testing",
+    "build:aot": "ng build --aot && ng run ng-engine:server",
+    "build:aot:prod": "ng build --prod && ng run ng-engine:server",
+    "build:aot:staging": "ng build --aot --target=staging --environment=staging && ng run ng-engine:server",
+    "build:aot:testing": "ng build --aot --target=testing --environment=testing && ng run ng-engine:server",
     "build:server": "webpack",
     "build:server:staging": "webpack",
     "build:server:testing": "webpack",
     "build:server:prod": "webpack -p",
-    "build:dist": "ng-packagr -p ng-package.json",
+    "build:dist": "npm run clean && ng-packagr -p ng-package.json",
     "build:prod:ngsw": "npm run build:prod && npm run ngsw:config && npm run ngsw:copy",
     "serve:prod:ngsw": "npm run build:prod:ngsw && node dist/server",
     "ngsw:config": "node_modules/.bin/ngsw-config dist src/ngsw-config.json",
     "ngsw:copy": "cp node_modules/@angular/service-worker/ngsw-worker.js dist/",
     "test": "run-s test:ng test:e2e test:server",
-    "test:ng": "ng test --watch=false --log-level=error",
+    "test:ng": "ng test --watch=false",
     "test:e2e": "ng e2e",
     "test:ng:watch": "ng test",
     "test:server": "npm run build && mocha",
     "lint": "eslint --fix . && ng lint --fix .",
     "e2e": "ng e2e",
-    "heroku-postbuild": "npm run build:prod"
+    "heroku-postbuild": "npm run build:prod",
+    "clean": "rm -rf dist"
   },
   "main": "./dist/ng-engine.js",
   "peerDependencies": {
-    "@angular/core": ">=5.0.0 <6.0.0",
-    "@angular/router": ">=5.0.0 <6.0.0",
+    "@angular/core": "6.0.7",
+    "@angular/router": "6.0.7",
     "lodash": "^4.11.1"
   },
   "devDependencies": {
-    "@angular/animations": "^5.2.9",
-    "@angular/cdk": "^5.2.4",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/core": "^5.2.9",
-    "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
-    "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/platform-server": "^5.2.9",
-    "@angular/router": "^5.2.9",
-    "@angular/service-worker": "^5.2.9",
-    "@ngrx/effects": "^5.2.0",
-    "@ngrx/entity": "^5.2.0",
-    "@ngrx/router-store": "^5.2.0",
-    "@ngrx/store": "^5.2.0",
-    "@ngrx/store-devtools": "^5.2.0",
-    "@nguniversal/express-engine": "^5.0.0-beta.5",
-    "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/animations": "6.0.7",
+    "@angular/cdk": "^6.3.2",
+    "@angular/cli": "6.0.8",
+    "@angular/common": "6.0.7",
+    "@angular/compiler": "6.0.7",
+    "@angular/compiler-cli": "6.0.7",
+    "@angular/core": "6.0.7",
+    "@angular/forms": "6.0.7",
+    "@angular/http": "6.0.7",
+    "@angular/language-service": "6.0.7",
+    "@angular/material": "^6.3.2",
+    "@angular/platform-browser": "6.0.7",
+    "@angular/platform-browser-dynamic": "6.0.7",
+    "@angular/platform-server": "6.0.7",
+    "@angular/router": "6.0.7",
+    "@angular/service-worker": "6.0.7",
+    "@fabrix/fabrix": "^1.0.3",
+    "@fabrix/spool-express": "^1.0.0",
+    "@fabrix/spool-repl": "^1.0.0",
+    "@fabrix/spool-router": "^1.0.0",
+    "@ngrx/effects": "^6.0.1",
+    "@ngrx/entity": "^6.0.1",
+    "@ngrx/router-store": "^6.0.1",
+    "@ngrx/store": "^6.0.1",
+    "@ngrx/store-devtools": "^6.0.1",
+    "@nguniversal/express-engine": "^6.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~10.3.4",
+    "@types/winston": "^2.2.20-alpha",
+    "codelyzer": "^4.0.1",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "hammerjs": "^2.0.8",
-    "rxjs": "^5.5.2",
-    "trailpack-express": "^2.0.6",
-    "trailpack-proxy-router": "^2.1.1",
-    "trailpack-repl": "^2.1.0",
-    "trailpack-router": "^2.0.0",
-    "trails": "^2.0.0",
-    "winston": "^2.2",
-    "zone.js": "^0.8.14",
-    "@angular/cli": "1.7.3",
-    "@angular/compiler-cli": "^5.2.9",
-    "@angular/language-service": "^5.2.9",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~9.4.0",
-    "@types/winston": "^2.2.20-alpha",
-    "codelyzer": "^4.0.1",
-    "eslint": "^4.17.0",
-    "eslint-config-trails": "^3.1.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
@@ -102,27 +98,23 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "mocha": "^3.0.2",
     "ng-packagr": "^2.2.0",
-    "node-sass": "^4.7.2",
-    "npm-run-all": "^4.1.2",
+    "node-sass": "^4.9.0",
+    "npm-run-all": "^4.1.3",
     "protractor": "~5.1.2",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
     "supertest": "^3.0.0",
-    "ts-loader": "^3.1.1",
+    "ts-loader": "^4.4.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": ">=2.4.2 <2.7.0",
-    "webpack-node-externals": "^1.6.0"
+    "typescript": "2.7.2",
+    "webpack-cli": "^2.1.3",
+    "webpack-node-externals": "^1.6.0",
+    "winston": "^2.2",
+    "zone.js": "^0.8.26"
   },
   "engines": {
-    "node": ">= 6.0.0",
+    "node": ">= 8.0.0",
     "npm": ">= 3"
-  },
-  "eslintConfig": {
-    "extends": "trails",
-    "env": {
-      "mocha": true
-    },
-    "rules": {
-      "nomen": 0
-    }
   }
 }
