--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/CaliStyle/NgEngine.git",
   "keywords": [
     "Angular",
-    "Trails.js",
+    "Fabrix",
     "NgEngine",
     "Config"
   ],
@@ -107,7 +107,7 @@
     "ts-loader": "^4.4.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "2.7.2",
+    "typescript": "~2.7.1",
     "webpack-cli": "^2.1.3",
     "webpack-node-externals": "^1.6.0",
     "winston": "^2.2",
