--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-engine",
-  "version": "7.0.0",
+  "version": "7.0.1",
   "license": "MIT",
   "repository": "https://github.com/CaliStyle/NgEngine.git",
   "keywords": [
@@ -104,6 +104,7 @@
     "supertest": "^3.0.0",
     "ts-loader": "^4.4.2",
     "ts-node": "~4.1.0",
+    "tsickle": "^0.33.0",
     "tslint": "~5.9.1",
     "typescript": "~3.1.3",
     "webpack-cli": "^2.1.3",
