--- a/package.json
+++ b/package.json
@@ -50,40 +50,39 @@
     "lodash": "^4.17.11"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.2",
-    "@angular/animations": "7.0.1",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/animations": "8.0.0",
     "@angular/cdk": "^7.0.4",
-    "@angular/cli": "^7.0.3",
-    "@angular/common": "7.0.1",
-    "@angular/compiler": "7.0.1",
-    "@angular/compiler-cli": "7.0.1",
-    "@angular/core": "7.0.1",
-    "@angular/forms": "7.0.1",
-    "@angular/http": "7.0.1",
-    "@angular/language-service": "7.0.1",
+    "@angular/cli": "^8.0.2",
+    "@angular/common": "8.0.0",
+    "@angular/compiler": "8.0.0",
+    "@angular/compiler-cli": "8.0.0",
+    "@angular/core": "8.0.0",
+    "@angular/forms": "8.0.0",
+    "@angular/language-service": "8.0.0",
     "@angular/material": "^7.0.2",
-    "@angular/platform-browser": "7.0.1",
-    "@angular/platform-browser-dynamic": "7.0.1",
-    "@angular/platform-server": "7.0.1",
-    "@angular/router": "7.0.1",
-    "@angular/service-worker": "7.0.1",
+    "@angular/platform-browser": "8.0.0",
+    "@angular/platform-browser-dynamic": "8.0.0",
+    "@angular/platform-server": "8.0.0",
+    "@angular/router": "8.0.0",
+    "@angular/service-worker": "8.0.0",
     "@fabrix/fabrix": "^1.6.0",
     "@fabrix/spool-express": "^1.5.1",
     "@fabrix/spool-repl": "^1.5.0",
     "@fabrix/spool-router": "^1.6.0",
-    "@ngrx/effects": "^6.0.1",
-    "@ngrx/entity": "^6.0.1",
-    "@ngrx/router-store": "^6.0.1",
-    "@ngrx/store": "^6.0.1",
-    "@ngrx/store-devtools": "^6.0.1",
-    "@nguniversal/express-engine": "^6.0.0",
-    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
+    "@ngrx/effects": "^8.0.0",
+    "@ngrx/entity": "^8.0.0",
+    "@ngrx/router-store": "^8.0.0",
+    "@ngrx/store": "^8.0.0",
+    "@ngrx/store-devtools": "^8.0.0",
+    "@nguniversal/express-engine": "^7.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
     "@types/core-js": "^2.5.0",
     "@types/jasmine": "~2.8.9",
     "@types/jasminewd2": "~2.0.5",
     "@types/node": "~10.3.4",
     "@types/winston": "^2.2.20-alpha",
-    "codelyzer": "^4.4.3",
+    "codelyzer": "^5.0.1",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
     "hammerjs": "^2.0.8",
@@ -96,22 +95,22 @@
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "mocha": "^3.0.2",
-    "ng-packagr": "^3.0.6",
+    "ng-packagr": "^5.1.0",
     "node-sass": "^4.9.2",
     "npm-run-all": "^4.1.5",
     "protractor": "~5.1.2",
-    "rxjs": "^6.3.3",
+    "rxjs": "^6.5.2",
     "rxjs-compat": "^6.2.2",
     "supertest": "^3.0.0",
     "ts-loader": "^4.4.2",
     "ts-node": "~4.1.0",
-    "tsickle": "^0.33.1",
+    "tsickle": "^0.35.0",
     "tslint": "~5.9.1",
-    "typescript": "~3.1.3",
+    "typescript": "~3.4.5",
     "webpack-cli": "^2.1.3",
     "webpack-node-externals": "^1.7.2",
     "winston": "^2.4.2",
-    "zone.js": "^0.8.26"
+    "zone.js": "~0.9.1"
   },
   "engines": {
     "node": ">= 8.0.0",
